<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_login_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Logo -->
        <TextView
            android:id="@+id/Login_APP_name"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="@android:dimen/app_icon_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="397dp"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/img" />


        <EditText
            android:id="@+id/etEmail"
            android:hint="@string/login_account_placeholder"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etPassword"
            android:hint="@string/login_psd_placeholder"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/btnLogin"
            android:text="@string/login_btn_login"
            android:textStyle="bold"
            android:background="@drawable/button_selector"
            android:textColor="@drawable/button_text_selector"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- 忘记密码和注册按钮行 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/tvRegister"
                android:text="@string/login_link_register"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp" />
            <!-- 竖线分隔符 -->
<!--            <View-->
<!--                android:layout_width="1dp"-->
<!--                android:layout_height="16dp"-->
<!--                android:background="#CCCCCC"-->
<!--                android:layout_marginHorizontal="12dp" />-->
            <!-- 忘记密码 -->
            <TextView
                android:id="@+id/tvForgot"
                android:text="@string/login_link_forgetPsd"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp" />

        </LinearLayout>


        <TextView
            android:text="@string/login_app_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            />


        <TextView
            android:text="@string/login_app_config_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:text="@string/login_app_config_psd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>
</FrameLayout>